grammar/AgentParser.py
# Generated from Agent.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AgentParser ( Parser ):

    grammarFileName = "Agent.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':-'", "'.'", "':'", "'communication'", 
                     "'planner'", "'beliefs'", "'desires'", "'intentions'", 
                     "'plan'", "','", "'_'", "'['", "']'", "'action'", "'sensor'", 
                     "'actuator'", "'+'", "'-'", "'+!'", "'-!'", "'!'", 
                     "'<'", "'=<'", "'>'", "'>='", "'not '", "'~'", "'->0.'", 
                     "'0.'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'&'", "'|'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CUSTOMLOGICALNAME", "CUSTOMFUNCTIONALNAME", 
                      "NUMERAL", "CONSTANT", "VARIABLE", "AND", "OR", "LeftParen", 
                      "RightParen", "STRING", "WS", "BlockComment", "LineComment" ]

    RULE_agent = 0
    RULE_context = 1
    RULE_bridgeRule = 2
    RULE_logicalContext = 3
    RULE_functionalContext = 4
    RULE_communicationContext = 5
    RULE_plannerContext = 6
    RULE_customFunctionalContext = 7
    RULE_logicalContextName = 8
    RULE_primitiveContextName = 9
    RULE_customLogicalContextName = 10
    RULE_plan = 11
    RULE_somethingToBeTrue = 12
    RULE_preConditions = 13
    RULE_postConditions = 14
    RULE_planConditions = 15
    RULE_condition = 16
    RULE_conditionTerm = 17
    RULE_planPostconditions = 18
    RULE_contextReference = 19
    RULE_conditions = 20
    RULE_conditions1 = 21
    RULE_action = 22
    RULE_actionPreconditions = 23
    RULE_actionPostconditions = 24
    RULE_functionInvocation = 25
    RULE_functionName = 26
    RULE_sensor = 27
    RULE_sensorIdentifier = 28
    RULE_sensorImplementation = 29
    RULE_actuator = 30
    RULE_actuatorIdentifier = 31
    RULE_actuatorImplementation = 32
    RULE_internalOperator = 33
    RULE_beliefAdition = 34
    RULE_beliefRemotion = 35
    RULE_desireAdition = 36
    RULE_desireRemotion = 37
    RULE_argumentList = 38
    RULE_expression = 39
    RULE_compoundAction = 40
    RULE_plansFormulas = 41
    RULE_contextName = 42
    RULE_head = 43
    RULE_body = 44
    RULE_otherBodyRules = 45
    RULE_bodyTerm = 46
    RULE_logicalOperator = 47
    RULE_term = 48
    RULE_term2 = 49
    RULE_formulas = 50
    RULE_atom = 51
    RULE_operator = 52
    RULE_negation = 53
    RULE_annotation = 54
    RULE_preAction = 55
    RULE_gradedValue = 56
    RULE_cost = 57

    ruleNames =  [ "agent", "context", "bridgeRule", "logicalContext", "functionalContext", 
                   "communicationContext", "plannerContext", "customFunctionalContext", 
                   "logicalContextName", "primitiveContextName", "customLogicalContextName", 
                   "plan", "somethingToBeTrue", "preConditions", "postConditions", 
                   "planConditions", "condition", "conditionTerm", "planPostconditions", 
                   "contextReference", "conditions", "conditions1", "action", 
                   "actionPreconditions", "actionPostconditions", "functionInvocation", 
                   "functionName", "sensor", "sensorIdentifier", "sensorImplementation", 
                   "actuator", "actuatorIdentifier", "actuatorImplementation", 
                   "internalOperator", "beliefAdition", "beliefRemotion", 
                   "desireAdition", "desireRemotion", "argumentList", "expression", 
                   "compoundAction", "plansFormulas", "contextName", "head", 
                   "body", "otherBodyRules", "bodyTerm", "logicalOperator", 
                   "term", "term2", "formulas", "atom", "operator", "negation", 
                   "annotation", "preAction", "gradedValue", "cost" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    CUSTOMLOGICALNAME=30
    CUSTOMFUNCTIONALNAME=31
    NUMERAL=32
    CONSTANT=33
    VARIABLE=34
    AND=35
    OR=36
    LeftParen=37
    RightParen=38
    STRING=39
    WS=40
    BlockComment=41
    LineComment=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class AgentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def communicationContext(self):
            return self.getTypedRuleContext(AgentParser.CommunicationContextContext,0)


        def EOF(self):
            return self.getToken(AgentParser.EOF, 0)

        def context(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentParser.ContextContext)
            else:
                return self.getTypedRuleContext(AgentParser.ContextContext,i)


        def bridgeRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentParser.BridgeRuleContext)
            else:
                return self.getTypedRuleContext(AgentParser.BridgeRuleContext,i)


        def getRuleIndex(self):
            return AgentParser.RULE_agent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgent" ):
                listener.enterAgent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgent" ):
                listener.exitAgent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAgent" ):
                return visitor.visitAgent(self)
            else:
                return visitor.visitChildren(self)




    def agent(self):

        localctx = AgentParser.AgentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_agent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.communicationContext()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentParser.T__3) | (1 << AgentParser.T__4) | (1 << AgentParser.T__5) | (1 << AgentParser.T__6) | (1 << AgentParser.T__7) | (1 << AgentParser.T__20) | (1 << AgentParser.CUSTOMLOGICALNAME) | (1 << AgentParser.CUSTOMFUNCTIONALNAME))) != 0):
                self.state = 119
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AgentParser.T__3, AgentParser.T__4, AgentParser.T__5, AgentParser.T__6, AgentParser.T__7, AgentParser.CUSTOMLOGICALNAME, AgentParser.CUSTOMFUNCTIONALNAME]:
                    self.state = 117
                    self.context()
                    pass
                elif token in [AgentParser.T__20]:
                    self.state = 118
                    self.bridgeRule()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(AgentParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalContext(self):
            return self.getTypedRuleContext(AgentParser.LogicalContextContext,0)


        def functionalContext(self):
            return self.getTypedRuleContext(AgentParser.FunctionalContextContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext" ):
                listener.enterContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext" ):
                listener.exitContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContext" ):
                return visitor.visitContext(self)
            else:
                return visitor.visitChildren(self)




    def context(self):

        localctx = AgentParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_context)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AgentParser.T__5, AgentParser.T__6, AgentParser.T__7, AgentParser.CUSTOMLOGICALNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.logicalContext()
                pass
            elif token in [AgentParser.T__3, AgentParser.T__4, AgentParser.CUSTOMFUNCTIONALNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.functionalContext()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BridgeRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def head(self):
            return self.getTypedRuleContext(AgentParser.HeadContext,0)


        def body(self):
            return self.getTypedRuleContext(AgentParser.BodyContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_bridgeRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBridgeRule" ):
                listener.enterBridgeRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBridgeRule" ):
                listener.exitBridgeRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBridgeRule" ):
                return visitor.visitBridgeRule(self)
            else:
                return visitor.visitChildren(self)




    def bridgeRule(self):

        localctx = AgentParser.BridgeRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bridgeRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.head()
            self.state = 131
            self.match(AgentParser.T__0)
            self.state = 132
            self.body()
            self.state = 133
            self.match(AgentParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalContextName(self):
            return self.getTypedRuleContext(AgentParser.LogicalContextNameContext,0)


        def formulas(self):
            return self.getTypedRuleContext(AgentParser.FormulasContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_logicalContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalContext" ):
                listener.enterLogicalContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalContext" ):
                listener.exitLogicalContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalContext" ):
                return visitor.visitLogicalContext(self)
            else:
                return visitor.visitChildren(self)




    def logicalContext(self):

        localctx = AgentParser.LogicalContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logicalContext)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.logicalContextName()
            self.state = 136
            self.match(AgentParser.T__2)
            self.state = 137
            self.formulas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionalContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def communicationContext(self):
            return self.getTypedRuleContext(AgentParser.CommunicationContextContext,0)


        def plannerContext(self):
            return self.getTypedRuleContext(AgentParser.PlannerContextContext,0)


        def customFunctionalContext(self):
            return self.getTypedRuleContext(AgentParser.CustomFunctionalContextContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_functionalContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionalContext" ):
                listener.enterFunctionalContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionalContext" ):
                listener.exitFunctionalContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionalContext" ):
                return visitor.visitFunctionalContext(self)
            else:
                return visitor.visitChildren(self)




    def functionalContext(self):

        localctx = AgentParser.FunctionalContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionalContext)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AgentParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.communicationContext()
                pass
            elif token in [AgentParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.plannerContext()
                pass
            elif token in [AgentParser.CUSTOMFUNCTIONALNAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.customFunctionalContext()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommunicationContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sensor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentParser.SensorContext)
            else:
                return self.getTypedRuleContext(AgentParser.SensorContext,i)


        def actuator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentParser.ActuatorContext)
            else:
                return self.getTypedRuleContext(AgentParser.ActuatorContext,i)


        def getRuleIndex(self):
            return AgentParser.RULE_communicationContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommunicationContext" ):
                listener.enterCommunicationContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommunicationContext" ):
                listener.exitCommunicationContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommunicationContext" ):
                return visitor.visitCommunicationContext(self)
            else:
                return visitor.visitChildren(self)




    def communicationContext(self):

        localctx = AgentParser.CommunicationContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_communicationContext)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(AgentParser.T__3)
            self.state = 145
            self.match(AgentParser.T__2)
            self.state = 148 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AgentParser.T__14]:
                    self.state = 146
                    self.sensor()
                    pass
                elif token in [AgentParser.T__15]:
                    self.state = 147
                    self.actuator()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 150 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==AgentParser.T__14 or _la==AgentParser.T__15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlannerContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plansFormulas(self):
            return self.getTypedRuleContext(AgentParser.PlansFormulasContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_plannerContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlannerContext" ):
                listener.enterPlannerContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlannerContext" ):
                listener.exitPlannerContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlannerContext" ):
                return visitor.visitPlannerContext(self)
            else:
                return visitor.visitChildren(self)




    def plannerContext(self):

        localctx = AgentParser.PlannerContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_plannerContext)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(AgentParser.T__4)
            self.state = 153
            self.match(AgentParser.T__2)
            self.state = 154
            self.plansFormulas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CustomFunctionalContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUSTOMFUNCTIONALNAME(self):
            return self.getToken(AgentParser.CUSTOMFUNCTIONALNAME, 0)

        def getRuleIndex(self):
            return AgentParser.RULE_customFunctionalContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomFunctionalContext" ):
                listener.enterCustomFunctionalContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomFunctionalContext" ):
                listener.exitCustomFunctionalContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustomFunctionalContext" ):
                return visitor.visitCustomFunctionalContext(self)
            else:
                return visitor.visitChildren(self)




    def customFunctionalContext(self):

        localctx = AgentParser.CustomFunctionalContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_customFunctionalContext)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(AgentParser.CUSTOMFUNCTIONALNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalContextNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveContextName(self):
            return self.getTypedRuleContext(AgentParser.PrimitiveContextNameContext,0)


        def customLogicalContextName(self):
            return self.getTypedRuleContext(AgentParser.CustomLogicalContextNameContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_logicalContextName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalContextName" ):
                listener.enterLogicalContextName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalContextName" ):
                listener.exitLogicalContextName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalContextName" ):
                return visitor.visitLogicalContextName(self)
            else:
                return visitor.visitChildren(self)




    def logicalContextName(self):

        localctx = AgentParser.LogicalContextNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logicalContextName)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AgentParser.T__5, AgentParser.T__6, AgentParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.primitiveContextName()
                pass
            elif token in [AgentParser.CUSTOMLOGICALNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.customLogicalContextName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveContextNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AgentParser.RULE_primitiveContextName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveContextName" ):
                listener.enterPrimitiveContextName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveContextName" ):
                listener.exitPrimitiveContextName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveContextName" ):
                return visitor.visitPrimitiveContextName(self)
            else:
                return visitor.visitChildren(self)




    def primitiveContextName(self):

        localctx = AgentParser.PrimitiveContextNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primitiveContextName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentParser.T__5) | (1 << AgentParser.T__6) | (1 << AgentParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CustomLogicalContextNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUSTOMLOGICALNAME(self):
            return self.getToken(AgentParser.CUSTOMLOGICALNAME, 0)

        def getRuleIndex(self):
            return AgentParser.RULE_customLogicalContextName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomLogicalContextName" ):
                listener.enterCustomLogicalContextName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomLogicalContextName" ):
                listener.exitCustomLogicalContextName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustomLogicalContextName" ):
                return visitor.visitCustomLogicalContextName(self)
            else:
                return visitor.visitChildren(self)




    def customLogicalContextName(self):

        localctx = AgentParser.CustomLogicalContextNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_customLogicalContextName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(AgentParser.CUSTOMLOGICALNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(AgentParser.LeftParen, 0)

        def somethingToBeTrue(self):
            return self.getTypedRuleContext(AgentParser.SomethingToBeTrueContext,0)


        def compoundAction(self):
            return self.getTypedRuleContext(AgentParser.CompoundActionContext,0)


        def RightParen(self):
            return self.getToken(AgentParser.RightParen, 0)

        def preConditions(self):
            return self.getTypedRuleContext(AgentParser.PreConditionsContext,0)


        def postConditions(self):
            return self.getTypedRuleContext(AgentParser.PostConditionsContext,0)


        def cost(self):
            return self.getTypedRuleContext(AgentParser.CostContext,0)


        def internalOperator(self):
            return self.getTypedRuleContext(AgentParser.InternalOperatorContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_plan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlan" ):
                listener.enterPlan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlan" ):
                listener.exitPlan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlan" ):
                return visitor.visitPlan(self)
            else:
                return visitor.visitChildren(self)




    def plan(self):

        localctx = AgentParser.PlanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_plan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(AgentParser.T__8)
            self.state = 167
            self.match(AgentParser.LeftParen)
            self.state = 168
            self.somethingToBeTrue()
            self.state = 169
            self.match(AgentParser.T__9)
            self.state = 170
            self.compoundAction()
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 171
                self.match(AgentParser.T__9)
                self.state = 172
                self.preConditions()
                self.state = 173
                self.match(AgentParser.T__9)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentParser.T__16) | (1 << AgentParser.T__17) | (1 << AgentParser.T__18))) != 0):
                    self.state = 174
                    self.internalOperator()


                self.state = 177
                self.postConditions()


            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentParser.T__9:
                self.state = 181
                self.match(AgentParser.T__9)
                self.state = 182
                self.cost()


            self.state = 185
            self.match(AgentParser.RightParen)
            self.state = 186
            self.match(AgentParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SomethingToBeTrueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(AgentParser.TermContext,0)


        def getRuleIndex(self):
            return AgentParser.RULE_somethingToBeTrue
